[metadata]
name = harbinger
version = 1.0.0
summary = Harbinger: modular manager for data plane testing frameworks 
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    harbinger
data_files =
    harbinger/etc =
        harbinger/etc/harbinger.cfg

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[entry_points]
console_scripts =
    harbinger = harbinger.main:main

harbinger.commands =
    list_frameworks = harbinger.list_frameworks:ListFrameworks
    list_tests = harbinger.list_tests:ListTests
    run = harbinger.run:Run
    scaffold = harbinger.scaffold:Scaffold
    remove_scaffold = harbinger.remove_scaffold:RemoveScaffold

harbinger.plugins =
